# tests

./: 解码.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gaosiedu/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/gaosiedu/gl/: CGLSurfaceView.java  CRender.java  ShaderUtil.java
app/src/main/java/com/gaosiedu/myapplication/: Activity4.java  App.java  EGLPreview.java  FBORender.java  LogUtil.java  MainActivity.java  MainActivity2.java  MainActivity3.java  MutiRender.java  MutiSurfaceView.java  MyEGLSurfaceView.java  MyRender.java  VideoActivity.java
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml  activity_video.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/test/java/com/gaosiedu/myapplication/: ExampleUnitTest.java
ffmpeglib/: CMakeLists.txt  build.gradle
ffmpeglib/src/androidTest/java/com/godrick/ffmpeglib/: ExampleInstrumentedTest.java
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: Audio.cpp  Audio.h  CallJava.cpp  CallJava.h  Ffmpeg.cpp  Ffmpeg.h  PlayStatus.cpp  PlayStatus.h  Queue.cpp  Queue.h  RecordBuffer.cpp  RecordBuffer.h  Video.cpp  Video.h  enter.cpp  ffmpeg.cpp  native-lib.cpp  opensl.txt
ffmpeglib/src/main/cpp/include/: Ffmpeg.cpp  androidLog.h
ffmpeglib/src/main/cpp/include/libavcodec/: vdpau.h
ffmpeglib/src/main/cpp/include/libsoundtouch/: SoundTouch.h
ffmpeglib/src/main/cpp/include/libswresample/: swresample.h
ffmpeglib/src/main/cpp/include/libx264/: x264.h
ffmpeglib/src/main/java/com/godrick/ffmpeglib/: NativeTest.java
ffmpeglib/src/main/java/com/godrick/ffmpeglib/listeners/: OnCompleteListener.java  OnErrorListener.java  OnLoadListener.java  OnPCMCallback.java  OnPauseResumeListener.java  OnProgressListener.java  OnRenderCallback.java  OnSourcePreparedListener.java  OnValueDbListener.java
ffmpeglib/src/main/java/com/godrick/ffmpeglib/opengl/: CGLSurfaceView.java  CGLSurfaceView2.java  CRender.java  ShaderUtil.java
ffmpeglib/src/main/java/com/godrick/ffmpeglib/surface/: EGLRender.java  EGLSurfaceView.java  EglHelper.java
ffmpeglib/src/main/java/com/godrick/ffmpeglib/util/: AudioRecordUtil.java  DisplayUtil.java  ImageTextureUtil.java  TimeUtil.java  VideoUtil.java
ffmpeglib/src/main/java/com/godrick/pusher/camera/: CCamera.java  CameraFBORender.java  CameraRender.java  CameraView.java
ffmpeglib/src/main/java/com/godrick/pusher/encodec/: BaseMediaEncoder.java  EncodeRender.java  MediaEncode.java
ffmpeglib/src/main/res/raw/: fragment2.glsl  fragment_mediacodec.glsl
ffmpeglib/src/main/res/values/: strings.xml
ffmpeglib/src/test/java/com/godrick/ffmpeglib/: ExampleUnitTest.java
